--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ categories = ["filesystem","command-line-utilities"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zstd = "0.9.0+zstd.1.5.0"
 zstd-safe = "4.1.1+zstd.1.5.0"
+zstd-sys = "1.6.1+zstd.1.5.0"
 uuid = { version = "0.8.2", features = ["serde","v4"] }
 clap = { version = "3.0.0-beta.5", features = ["yaml","env","color","suggestions","unicode"] }
 
